[package]
name = "swap-pool"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swap_pool"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
raydium-cp-swap = { git = "https://github.com/toanbt173404/raydium-cp-swap", features = [
    "no-entrypoint",
    "cpi",
    "devnet",
] }
raydium-amm-cpi = { path = "../amm-cpi", features = [
    "no-entrypoint",
    "cpi",
    "devnet",
] }
